# aoc-2025

./: .gitignore  aoc2025.cabal  flake.nix  hie.yaml
app/: Main.hs
src/Days/: Day01.hs  Day02.hs  Day03.hs
